@@ -33,7 +33,6 @@ import java.io.PrintStream;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -65,7 +64,7 @@ public class BindingsGenerator {
     private final PrintStream errStream;
     private final PrintStream outStream;
     private Set<String> classNames = new HashSet<>();
-    private final Path userDir = Paths.get(System.getProperty(USER_DIR));
+    private final Path userDir = Path.of(System.getProperty(USER_DIR));
 
     BindingsGenerator(PrintStream out, PrintStream err) {
         this.outStream = out;
@@ -199,10 +198,10 @@ public class BindingsGenerator {
 
     private void handlePathDependency(String libPath) {
         Path libraryPath;
-        if (Paths.get(libPath).isAbsolute()) {
-            libraryPath = Paths.get(libPath);
+        if (Path.of(libPath).isAbsolute()) {
+            libraryPath = Path.of(libPath);
         } else {
-            libraryPath = Paths.get(env.getProjectRoot().toString(), libPath);
+            libraryPath = Path.of(env.getProjectRoot().toString(), libPath);
         }
         env.addClasspath(libraryPath.toString());
     }
@@ -229,14 +228,14 @@ public class BindingsGenerator {
         String userPath = userDir.toString();
         String outputPath = env.getOutputPath();
         if (env.getModulesFlag()) {
-            userPath = Paths.get(userPath, MODULES_DIR).toString();
+            userPath = Path.of(userPath, MODULES_DIR).toString();
         } else if (outputPath != null) {
-            if (!Paths.get(outputPath).toFile().exists()) {
+            if (!Path.of(outputPath).toFile().exists()) {
                 throw new BindgenException("error: output path provided could not be found: " + outputPath);
             }
             userPath = outputPath;
         }
-        utilsDirPath = dependenciesPath = modulePath = Paths.get(userPath);
+        utilsDirPath = dependenciesPath = modulePath = Path.of(userPath);
     }
 
     private void handleFailedClassGens() {
@@ -257,11 +256,11 @@ public class BindingsGenerator {
         for (JError jError : env.getExceptionList()) {
             String fileName = jError.getShortExceptionName() + BAL_EXTENSION;
             if (env.getModulesFlag()) {
-                utilsDirStrPath = Paths.get(modulePath.toString(), jError.getPackageName()).toString();
+                utilsDirStrPath = Path.of(modulePath.toString(), jError.getPackageName()).toString();
                 createDirectory(utilsDirStrPath);
             }
             // The folder structure is flattened to address the Project API changes.
-            outputSyntaxTreeFile(jError, env, Paths.get(utilsDirStrPath, fileName).toString(), false);
+            outputSyntaxTreeFile(jError, env, Path.of(utilsDirStrPath, fileName).toString(), false);
         }
     }
 
@@ -285,16 +284,16 @@ public class BindingsGenerator {
         for (String c : classList) {
             try {
                 if (classLoader != null) {
-                    Class classInstance = classLoader.loadClass(c);
+                    Class<?> classInstance = classLoader.loadClass(c);
                     if (classInstance != null && isPublicClass(classInstance)) {
                         JClass jClass = new JClass(classInstance, env);
                         Path filePath;
                         if (env.getModulesFlag()) {
-                            String outputFile = Paths.get(modulePath.toString(), jClass.getPackageName()).toString();
+                            String outputFile = Path.of(modulePath.toString(), jClass.getPackageName()).toString();
                             createDirectory(outputFile);
-                            filePath = Paths.get(outputFile, jClass.getShortClassName() + BAL_EXTENSION);
+                            filePath = Path.of(outputFile, jClass.getShortClassName() + BAL_EXTENSION);
                         } else {
-                            filePath = Paths.get(modulePath.toString(), jClass.getShortClassName() + BAL_EXTENSION);
+                            filePath = Path.of(modulePath.toString(), jClass.getShortClassName() + BAL_EXTENSION);
                         }
                         // Prevent the overwriting of existing class implementations with partially generated classes.
                         if (Files.exists(filePath) && !env.isDirectJavaClass()) {
