@@ -37,18 +37,19 @@ import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Common utils that are reused within data-mapper test suits.
  */
-public class DataMapperTestUtils {
+public final class DataMapperTestUtils {
 
-    private static JsonParser parser = new JsonParser();
-    private static Path sourcesPath = new File(DataMapperTestUtils.class.getClassLoader().getResource("codeaction")
-            .getFile()).toPath();
-    private static final LanguageServerContext serverContext = new LanguageServerContextImpl();
-    private static final WorkspaceManager workspaceManager = new BallerinaWorkspaceManager(serverContext);
+    private static final Path SOURCES_PATH = new File(DataMapperTestUtils.class.getClassLoader()
+            .getResource("codeaction").getFile()).toPath();
+    private static final LanguageServerContext SERVER_CONTEXT = new LanguageServerContextImpl();
+    private static final WorkspaceManager WORKSPACE_MANAGER = new BallerinaWorkspaceManager(SERVER_CONTEXT);
+
+    private DataMapperTestUtils() {
+    }
 
 
     /**
@@ -58,7 +59,7 @@ public class DataMapperTestUtils {
      * @return {@link JsonObject}   Response as Jason Object
      */
     private static JsonObject getResponseJson(String response) {
-        JsonObject responseJson = parser.parse(response).getAsJsonObject();
+        JsonObject responseJson = JsonParser.parseString(response).getAsJsonObject();
         responseJson.remove("id");
         return responseJson;
     }
@@ -76,18 +77,18 @@ public class DataMapperTestUtils {
             throws IOException, WorkspaceDocumentException {
 
         // Read expected results
-        Path sourcePath = sourcesPath.resolve("source").resolve(source);
+        Path sourcePath = SOURCES_PATH.resolve("source").resolve(source);
         TestUtil.openDocument(serviceEndpoint, sourcePath);
 
         // Filter diagnostics for the cursor position
         List<io.ballerina.tools.diagnostics.Diagnostic> diagnostics
-                = TestUtil.compileAndGetDiagnostics(sourcePath, workspaceManager, serverContext);
+                = TestUtil.compileAndGetDiagnostics(sourcePath, WORKSPACE_MANAGER, SERVER_CONTEXT);
         List<Diagnostic> diags = new ArrayList<>(CodeActionUtil.toDiagnostics(diagnostics));
         Position pos = new Position(configJsonObject.get("line").getAsInt(),
                 configJsonObject.get("character").getAsInt());
         diags = diags.stream().
                 filter(diag -> PositionUtil.isWithinRange(pos, diag.getRange()))
-                .collect(Collectors.toList());
+                .toList();
         CodeActionContext codeActionContext = new CodeActionContext(diags);
         Range range = new Range(pos, pos);
         String response = TestUtil.getCodeActionResponse(serviceEndpoint, sourcePath.toString(), range,
